[gd_scene load_steps=8 format=4 uid="uid://bkfgf4vgexmva"]

[ext_resource type="Script" uid="uid://0h6uwl1ghtep" path="res://scripts/game_manager.gd" id="1_iywne"]
[ext_resource type="PackedScene" uid="uid://bndpgu0c7tlr6" path="res://scenes/player.tscn" id="1_uwrxv"]
[ext_resource type="Texture2D" uid="uid://7b07j4jshflr" path="res://assets/sprites/TileSet v1.0.png" id="1_yqjtg"]
[ext_resource type="PackedScene" uid="uid://rv0632prr6s5" path="res://scenes/knife.tscn" id="3_lnu2h"]
[ext_resource type="FontFile" uid="uid://vgl0sm2xl6rm" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_p57ef"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lnu2h"]
texture = ExtResource("1_yqjtg")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:1/0 = 0
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
3:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:2/0 = 0
4:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
6:5/0 = 0
7:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
4:6/0 = 0
4:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
5:6/0 = 0
5:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:2/0 = 0
8:3/0 = 0
9:3/0 = 0

[sub_resource type="TileSet" id="TileSet_lbhrr"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_lnu2h")

[node name="Game" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_iywne")

[node name="TileMap" type="Node" parent="."]

[node name="Layer0" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAD+//7/AAABAAAAAAD///7/AAABAAAAAAD/////AAABAAEAAAAAAP//AAABAAEAAAD+////AAABAAEAAAD9//7/AAAAAAAAAAD9////AAAAAAEAAAAAAP7/AAABAAAAAAABAP//AAABAAEAAAABAP7/AAABAAAAAAD9/wAAAAAAAAEAAAD+/wAAAAABAAEAAAD//wAAAAABAAUAAAAAAAAAAAABAAEAAAABAAAAAAABAAEAAAD+/wEAAAABAAEAAAD//wEAAAABAAEAAAAAAAEAAAABAAEAAAABAAEAAAABAAEAAAD9/wEAAAAAAAEAAAD9/wIAAAAAAAEAAAD9/wMAAAAAAAEAAAD9/wQAAAAAAAIAAAD+/wMAAAABAAEAAAD+/wIAAAABAAEAAAD//wIAAAABAAEAAAAAAAIAAAABAAEAAAABAAIAAAABAAUAAAABAAMAAAABAAEAAAAAAAMAAAAFAAcAAAD//wMAAAABAAEAAAD+/wQAAAABAAIAAAD//wQAAAABAAIAAAAAAAQAAAABAAIAAAABAAQAAAABAAIAAAACAAQAAAACAAIAAAACAAMAAAACAAEAAAACAAIAAAABAAEAAAACAAEAAAABAAEAAAACAAAAAAAGAAIAAAACAP7/AAACAAAAAAACAP//AAACAAEAAAD9//3/AAAEAAAAAAD+//3/AAAEAAAAAAD///3/AAAEAAAAAAAAAP3/AAAEAAAAAAABAP3/AAAIAAIAAAACAP3/AAAEAAAAAAD9/wUAAAAEAAIAAAD+/wUAAAAEAAIAAAD//wUAAAAEAAIAAAAAAAUAAAAEAAIAAAABAAUAAAAEAAIAAAACAAUAAAAEAAIAAAADAAQAAAAFAAEAAAADAAMAAAAFAAEAAAADAAIAAAACAAIAAAADAAEAAAABAAEAAAADAAAAAAACAAAAAAADAP//AAAFAAEAAAADAP7/AAAFAAEAAAD8//7/AAADAAEAAAD8////AAADAAEAAAD8/wAAAAADAAEAAAD8/wEAAAADAAEAAAD8/wIAAAADAAEAAAD8/wMAAAADAAEAAAD8/wQAAAADAAEAAAD8/wUAAAADAAIAAAADAAUAAAAFAAIAAAD8//3/AAADAAAAAAADAP3/AAAFAAAAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAEAAIAAAAEAAYAAAAFAAIAAAAEAAYAAAAGAAIAAAAGAAQAADAHAAIAAAAEAAYAAAAIAAIAAAAEAAYAAAAJAAIAAAAEAAIAAAAEAAAAAAAEAAAAAAAFAAAAAAAEAAAAAAAGAAAAAAAEAAAAAAAHAAAAAAAHAAQAAAAIAAAAAAAEAAAAAAAJAAAAAAABAAEAAAAKAAMAAAADAAUAAAAKAAQAAAADAAUAAAAKAAUAAAADAAEAAAALAAUAAAAAAAIAAAAKAAYAAAADAAIAAAALAAYAAAAEAAIAAAAMAAYAAAAEAAIAAAANAAYAAAAEAAIAAAAOAAcAAAADAAIAAAAOAAYAAAAAAAIAAAAPAAcAAAAEAAIAAAAQAAcAAAAEAAIAAAARAAcAAAAEAAIAAAASAAcAAAAFAAIAAAASAAYAAAAFAAEAAAASAAUAAAAFAAEAAAASAAQAAAAFAAEAAAASAAMAAAAFAAEAAAASAAIAAAAFAAEAAAASAAEAAAAFAAEAAAASAAAAAAAFAAEAAAASAP//AAAFAAEAAAASAP7/AAAFAAEAAAASAP3/AAAFAAAAAAARAP3/AAAEAAAAAAAQAP3/AAAEAAAAAAAPAP3/AAAEAAAAAAAOAP3/AAAEAAAAAAANAP3/AAAEAAAAAAAMAP3/AAAEAAAAAAALAP3/AAAEAAAAAAAKAP3/AAAEAAAAAAAJAP3/AAADAAAAAAAJAP7/AAADAAEAAAAJAP//AAADAAEAAAAKAP7/AAAAAAAAAAALAP7/AAABAAEAAAAMAP7/AAABAAEAAAANAP7/AAABAAEAAAAOAP7/AAABAAEAAAAOAP//AAABAAEAAAAPAP//AAABAAEAAAAPAAAAAAABAAEAAAAOAAAAAAABAAEAAAANAAEAAAABAAEAAAAMAAEAAAABAAEAAAAMAAAAAAABAAEAAAALAAAAAAABAAEAAAALAP//AAABAAEAAAAKAP//AAABAAEAAAAKAAAAAAABAAEAAAAKAAEAAAABAAEAAAAMAP//AAABAAEAAAALAAEAAAABAAEAAAANAAAAAAABAAEAAAALAAIAAAABAAEAAAAKAAIAAAABAAEAAAAPAP7/AAABAAEAAAAQAP7/AAABAAEAAAARAP7/AAACAAAAAAAQAP//AAABAAEAAAANAP//AAABAAEAAAAOAAEAAAABAAEAAAAQAAAAAAABAAEAAAARAP//AAABAAEAAAAPAAEAAAABAAEAAAAOAAIAAAABAAEAAAANAAIAAAABAAEAAAAQAAEAAAABAAEAAAAPAAIAAAABAAEAAAAOAAMAAAABAAEAAAARAAAAAAABAAEAAAARAAEAAAABAAEAAAAQAAIAAAABAAEAAAAQAAMAAAABAAEAAAAPAAMAAAABAAEAAAAOAAQAAAABAAEAAAANAAQAAAABAAEAAAANAAMAAAABAAEAAAAMAAMAAAABAAEAAAAMAAIAAAABAAEAAAAMAAQAAAABAAEAAAALAAQAAAABAAEAAAALAAMAAAABAAEAAAAMAAUAAAABAAEAAAANAAUAAAABAAEAAAAOAAUAAAABAAEAAAAPAAUAAAABAAEAAAAQAAUAAAABAAEAAAAQAAQAAAABAAEAAAARAAQAAAABAAEAAAARAAMAAAABAAEAAAAPAAQAAAABAAEAAAARAAIAAAABAAEAAAARAAUAAAABAAEAAAARAAYAAAACAAIAAAAQAAYAAAABAAEAAAAPAAYAAAABAAEAAAA=")
tile_set = SubResource("TileSet_lbhrr")

[node name="Player" parent="." instance=ExtResource("1_uwrxv")]
position = Vector2(-26, -35)

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(1, 0)
zoom = Vector2(3, 3)

[node name="Area2D" parent="." instance=ExtResource("3_lnu2h")]
position = Vector2(-52, 117)

[node name="MultiplayerHUB" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -247.0
offset_top = -4.0
offset_right = -137.0
offset_bottom = 31.0

[node name="Panel" type="Panel" parent="MultiplayerHUB"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -33.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MultiplayerHUB/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HostGame" type="Button" parent="MultiplayerHUB/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_p57ef")
theme_override_font_sizes/font_size = 8
text = "Host Game"

[node name="JoinGame" type="Button" parent="MultiplayerHUB/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_p57ef")
theme_override_font_sizes/font_size = 8
text = "Join Game"

[node name="Players" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://cxfbp4dcxsqq6")
spawn_path = NodePath("../Players")
spawn_limit = 2

[connection signal="pressed" from="MultiplayerHUB/Panel/VBoxContainer/HostGame" to="GameManager" method="become_host"]
[connection signal="pressed" from="MultiplayerHUB/Panel/VBoxContainer/JoinGame" to="GameManager" method="join_game"]
